Fix Star this project button overflowing on smaller devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -67,12 +67,12 @@
   color: #66347f;
   font-weight: bold;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50px;
-  width: 350px;
+  width: 280px;
   margin: 0 auto;
   padding: 8px;
   gap: 10px;
